# week2_enpm808x

./: .gitignore  README.md
Week 2/: CMakeLists.txt  README.md  compile_commands.json
Week 2/problem1_1/: CMakeLists.txt
Week 2/problem1_1/libs/: lib1_1.cpp
Week 2/problem1_2/: CMakeLists.txt
Week 2/problem1_2/app/: vector_average.cpp
Week 2/problem1_3/: CMakeLists.txt
Week 2/problem1_4/: CMakeLists.txt
Week 2/problem1_5/: CMakeLists.txt
data/: information.txt
problem1_1/libs/: lib1_1.cpp  lib1_1.hpp
problem1_2/app/: vector_average.cpp
problem1_3/app/: control_handler.cpp
problem1_4/app/: average_grade.cpp
problem1_5/app/: word_counter.cpp
